# sl-simulation

./: .gitignore  CLAUDE.md  README.md  TODO.md  design.md  plan.md  pyproject.toml
docs/: api_reference.md  config_reference.md  design_overview.md  edge_cases.md  gym_wrapper.md  request_flow.md  rl_training.md
gym_env/: action_mapper.py  multi_action_mapper.py  multi_discrete_env.py  observation_builder.py  random_start.py  reward_calculator.py  serverless_env.py  serverless_gym_env.py  vahidinia_env.py
papers/: reproduction_plan_vahidinia2023.md
rl_agent/: infer.py  train.py
serverless_sim/: __main__.py
tests/: test_autoscaling.py  test_cluster.py  test_config_logging.py  test_controller.py  test_drain.py  test_export.py  test_extended_lifecycle.py  test_find_reusable_running.py  test_gym_env.py  test_lb_strategies.py  test_lifecycle.py  test_load_balancer.py  test_min_max_instances.py  test_monitoring.py  test_ppo_inference.py  test_ppo_training.py  test_richer_monitoring.py  test_sim_engine.py  test_skeleton.py  test_timeout.py  test_trace_replay.py  test_transition_model.py  test_vahidinia_env.py  test_vecenv.py  test_workload.py
tools/: benchmark.py  benchmark_datanew.py  build_state_resources.py  build_transition_profile.py  compare_logs.py  compare_rewards.py  config_merge.py  fit_trace_gamma_windows.py  gen_bursty_trace.py  infer_all.py  lstm_predict.py  merge_traces.py  plot_costs.py  plot_sweep.py  plot_trace.py  plot_traffic.py  run_all.py  run_experiments.py  slice_trace.py  sweep_params.py  traffic_stats.py  train_all.py
(+71 files in other folders)
